--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@nuxtjs/tailwindcss": "^1.0.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1"
+    "postcss-import": "^12.0.1",
+    "postcss-nested": "^4.2.1",
+    "prettier": "^1.19.1",
+    "tailwindcss": "^1.4.6"
   }
 }
